@@ -1,5 +1,8 @@
 2002-02-21  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* SkunkWeb/SkunkWeb/bootloader.py.in (init): for restart,
+	uninstall the import hook.	
+
 	* pylibs/vfs/vfs.py (_keyRE): I forgot to compile this regex,
 	causing an error on swmgr restart.
 
